# mkdn

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  partykit.json  vite.config.js
.github/workflows/: release-desktop.yml
party/: server.js
public/: manifest.json  sw.js
scripts/: generate-icons.js
src/: app.js  constants.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/ai/: ai-actions.js  ai-commands.js  ai-inline.js  ai-panel.js  ai-provider.js
src/backlinks/: backlinks-engine.js  backlinks-ui.js  wikilink-plugin.js
src/canvas/: canvas-commands.js  canvas-data.js  canvas-interaction.js  canvas-mode.js  canvas-renderer.js
src/collab/: collab-commands.js  collab-history.js  collab-manager.js  collab-ui.js
src/command-palette/: command-palette.js  command-registry.js  file-switcher.js  fuzzy-match.js  heading-utils.js
src/comments/: comment-plugin.js  comment-store.js
src/editor/: callout-plugin.js  details-plugin.js  drag-handle-plugin.js  embed-plugin.js  emoji-data.js  emoji-plugin.js  floating-toolbar.js  image-paste-plugin.js  mermaid-plugin.js  milkdown-setup.js  slash-menu-plugin.js  source-formatter.js  split-pane.js
src/export/: docx-export.js  export-commands.js  export-menu.js  github-publish.js  html-export.js  slides.js
src/find-replace/: find-bar.js  find-replace-engine.js  find-replace-plugin.js
src/focus/: focus-manager.js  paragraph-focus-plugin.js  typewriter-plugin.js
(+71 files in other folders)
