[package]
name = "mkdn"
version = "2.2.0"
description = "A beautiful desktop markdown editor"
authors = ["Nicolas Karasiak"]
license = "MIT"
repository = "https://github.com/nkarasiak/mkdn"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
